--- a/src/partials/ChatItem/ChatItem.hbs
+++ b/src/partials/ChatItem/ChatItem.hbs
@@ -1,5 +1,5 @@
-<div class="chat-item">
-  <img class="chat-item__avatar" src="/avatar.png" alt="Avatar" />
+<li class="chat-item">
+  <img class="chat-item__avatar" src="/avatar.png" alt="Avatar"/>
   <div>
     <div class="chat-item__name">Андрей</div>
     <div class="chat-item__preview">
@@ -12,4 +12,4 @@
     <div class="chat-item__notification-badge">4</div>
   </div>
   <div class="chat-item__separator"></div>
-</div>
+</li>
