--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -22,7 +22,7 @@
   }
 }
 
-.settings {
+.profile {
   width: 30rem;
   margin: 8rem auto 0 auto;
   display: flex;
@@ -50,6 +50,39 @@
       display: flex;
       justify-content: space-between;
       padding: 6px;
+    }
+  }
+}
+
+.settings {
+  width: 30rem;
+  margin: 8rem auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__avatar {
+    margin-bottom: 1rem;
+  }
+
+  &__form {
+    width: 100%;
+    list-style-type: none;
+    margin-bottom: 4rem;
+
+    label {
+      &:not(:last-child) {
+        border-bottom: 1px solid #eaeaea;
+      }
+
+      display: flex;
+      justify-content: space-between;
+      padding: 6px;
+
+      input {
+        border: none;
+        text-align: right;
+      }
     }
   }
 }
