--- a/src/partials/ChatBrowser/ChatBrowser.hbs
+++ b/src/partials/ChatBrowser/ChatBrowser.hbs
@@ -1,10 +1,17 @@
-<div class="browser">
-  <a href="../../pages/profile/settings.html" class="profile-link">Профиль</a>
+<aside class="browser">
+  <a href="../../pages/profile/profile.html" class="link">Профиль</a>
   <div class="search">
-    <label for="search">Поиск</label>
-    <input id="search"/>
+    <label for="search" class="search__label">Поиск</label>
+    <input id="search" class="search__input" name="search_query" type="text" placeholder="Поиск"/>
   </div>
   <ul class="chat-list">
     {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
+    {{> ChatItem/ChatItem}}
   </ul>
-</div>
+</aside>
