--- a/src/partials/ChatItem/ChatItem.hbs
+++ b/src/partials/ChatItem/ChatItem.hbs
@@ -3,13 +3,15 @@
   <div>
     <div class="chat-item__name">Андрей</div>
     <div class="chat-item__preview">
-      <span>Вы:</span>
+      <span class="chat-item__sender">Вы:</span>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, eum!
     </div>
   </div>
   <div>
     <div class="chat-item__time">12:10</div>
-    <div class="chat-item__notification-badge">4</div>
+    <div class="chat-item__notification-badge-container">
+      <span class="chat-item__notification-badge">4</span>
+    </div>
   </div>
   <div class="chat-item__separator"></div>
 </li>
