--- a/src/partials/ChatBrowser/ChatBrowser.pcss
+++ b/src/partials/ChatBrowser/ChatBrowser.pcss
@@ -1,12 +1,30 @@
+@import "../../styles/variables.pcss";
+
 .browser {
   display: grid;
   grid-template-rows: repeat(2, min-content) auto;
   border-right: 1px solid #999999;
   background-color: #FBFBFB;
+
+  a {
+    margin: 12px 18px;
+  }
 }
-.profile-link {
-}
+
 .search {
+  &__label {
+    display: none;
+  }
+
+  &__input {
+    width: calc(100% - 36px);
+    margin: 0 18px;
+    background: #EFEFEF;
+    border: none;
+    border-radius: 9999px;
+    padding: 6px;
+    text-align: center;
+  }
 }
 
 .chat-list {
@@ -19,19 +37,27 @@
   display: grid;
   gap: 6px;
   grid-template-columns: 1fr auto 1fr;
+  cursor: pointer;
 
   &__separator {
     height: 1px;
-    width: 80%;
+    width: 100%;
     background-color: #999999;
+    grid-column: span 3;
+  }
+
+  &__sender {
+    font-weight: bold;
   }
 
   &__avatar {
+    margin: auto 6px;
     height: 3rem;
     aspect-ratio: 1;
   }
 
   &__name {
+    font-weight: bold;
   }
 
   &__preview {
@@ -40,6 +66,21 @@
   &__time {
   }
 
+  &__notification-badge-container {
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   &__notification-badge {
+    text-align: center;
+    color: white;
+    background-color: $color-primary;
+    border-radius: 9999px;
+    padding: 0.5rem;
+    width: 2rem;
+    height: 2rem;
   }
 }
