--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -13,6 +13,9 @@
   border: none;
   background-color: $color-primary;
   margin-bottom: 1rem;
+  padding: 12px;
+  line-height: 10px;
+  box-sizing: border-box;
 }
 
 .link {
