--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -37,6 +37,10 @@
     margin-bottom: 1rem;
   }
 
+  &__nav {
+    width: 100%;
+  }
+
   &__section {
     width: 100%;
     list-style-type: none;
