Add TS, Block components, event bus

--- a/src/widgets/ChatBrowser/ChatBrowser.hbs
+++ b/src/widgets/ChatBrowser/ChatBrowser.hbs
@@ -1,5 +1,5 @@
 <aside class="browser">
-  <a href="../../pages/profile/profile.html" class="link">Профиль</a>
+  <a href="../../pages/ProgilePage/profile.hbs" class="link">Профиль</a>
   <div class="search">
     <label for="search" class="search__label">Поиск</label>
     <input id="search" class="search__input" name="search_query" type="text" placeholder="Поиск"/>
