--- a/src/widgets/auth.pcss
+++ b/src/widgets/auth.pcss
@@ -1,5 +1,5 @@
-@import "../../styles/mixins.pcss";
-@import "../../styles/variables.pcss";
+@import "../styles/mixins.pcss";
+@import "../styles/variables.pcss";
 
 .card {
   @mixin position-center;
