--- a/src/pages/ProgilePage/profile.hbs
+++ b/src/pages/ProgilePage/profile.hbs
@@ -1,15 +1,3 @@
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="../../styles/index.pcss"/>
-  <link rel="stylesheet" type="text/css" href="./profile.pcss"/>
-  <title>Document</title>
-</head>
-<body>
 <div class="page-wrapper">
   <a class="back-button" href="../../index.html"><img src="/back.svg" alt="Стрелка назад"/></a>
   <main class="profile">
@@ -26,17 +14,15 @@
     <nav class="profile__nav">
       <ul class="profile__section">
         <li>
-          <a class="link" href="./settings.html">Изменить данные</a>
+          <a class="link" href="../SettingsPage/settings.hbs">Изменить данные</a>
         </li>
         <li>
-          <a class="link" href="./settings.html">Изменить пароль</a>
+          <a class="link" href="../SettingsPage/settings.hbs">Изменить пароль</a>
         </li>
         <li>
-          <a class="link_alert" href="../auth/login.html">Выйти</a>
+          <a class="link_alert" href="../LoginPage/login.hbs">Выйти</a>
         </li>
       </ul>
     </nav>
   </main>
 </div>
-</body>
-</html>
