--- a/src/pages/RegisterPage/register.hbs
+++ b/src/pages/RegisterPage/register.hbs
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" type="text/css" href="../../styles/index.pcss"/>
-  <link rel="stylesheet" type="text/css" href="./auth.pcss"/>
-  <title>{{title}}</title>
-</head>
-<body>
 <main class="card">
   <h1>Регистрация</h1>
   <form class="form">
@@ -40,8 +30,6 @@
       <input name="password_repeat" type="password"/>
     </label>
     <button class="button_primary" type="submit">Зарегистрироваться</button>
-    <a href="login.html" class="link_centered">Вход</a>
+    <a href="../LoginPage/login.hbs" class="link_centered">Вход</a>
   </form>
 </main>
-</body>
-</html>
