Add arrays, events

--- a/src/pages/HomePage/main.hbs
+++ b/src/pages/HomePage/main.hbs
@@ -1,5 +1,5 @@
 <div class="raw-container">
-{{> ChatBrowser/ChatBrowser}}
+ {{{ ChatBrowser }}}
   <main class="chat">
     <div class="chat-info">
       <img class="chat-info__avatar" src="/avatar.png" alt="Avatar"/>
@@ -10,17 +10,12 @@
       <li class="chat-thread__date-separator">
         <span>19 июня</span>
       </li>
-      {{> Message/Message }}
-      {{> Message/Message }}
-      {{> Message/Message }}
-      {{> Message/Message }}
+       {{{ Message }}}
       <li class="chat-thread__date-separator">
         <span>20 июня</span>
       </li>
-      {{> Message/Message }}
-      {{> Message/Message }}
-      {{> Message/Message }}
+      {{{ Message }}}
     </ul>
-    {{> MessageControls/MessageControls}}
+     {{{ MessageControls }}}
   </main>
 </div>
