--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -1,4 +1,11 @@
 @import "variables.pcss";
+@import "../widgets/auth.pcss";
+@import "../widgets/error.pcss";
+@import "../widgets/ChatBrowser/ChatBrowser.pcss";
+@import "../widgets/MessageControls/MessageControls.pcss";
+@import "../pages/HomePage/main.pcss";
+@import "../pages/ProgilePage/profile.pcss";
+
 
 * {
   margin: 0;
