--- a/src/widgets/ChatBrowser/ChatBrowser.hbs
+++ b/src/widgets/ChatBrowser/ChatBrowser.hbs
@@ -5,13 +5,8 @@
     <input id="search" class="search__input" name="search_query" type="text" placeholder="Поиск"/>
   </div>
   <ul class="chat-list">
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
-    {{> ChatItem/ChatItem}}
+    {{# each ChatItems}}
+      {{{ this }}}
+    {{/each}}
   </ul>
 </aside>
