--- a/src/pages/LoginPage/login.hbs
+++ b/src/pages/LoginPage/login.hbs
@@ -1,4 +1,3 @@
-
 <main class="card">
   <h1>Вход</h1>
   <form class="form">
@@ -6,6 +5,6 @@
       {{{ this }}}
     {{/each}}
     {{{Button}}}
-    <a href="register.hbs" class="link_centered">Нет аккаунта?</a>
+    {{{ Link }}}
   </form>
 </main>
