--- a/src/pages/RegisterPage/register.hbs
+++ b/src/pages/RegisterPage/register.hbs
@@ -1,6 +1,9 @@
 <main class="card">
   <h1>Регистрация</h1>
   <form class="form">
+    {{# each Inputs}}
+      {{{ this }}}
+    {{/each}}
     <label class="form__input">
       Почта
       <input name="email" type="email"/>
