--- a/src/pages/RegisterPage/register.hbs
+++ b/src/pages/RegisterPage/register.hbs
@@ -4,35 +4,7 @@
     {{# each Inputs}}
       {{{ this }}}
     {{/each}}
-    <label class="form__input">
-      Почта
-      <input name="email" type="email"/>
-    </label>
-    <label class="form__input">
-      Логин
-      <input name="login" type="text"/>
-    </label>
-    <label class="form__input">
-      Имя
-      <input name="first_name" type="text"/>
-    </label>
-    <label class="form__input">
-      Фамилия
-      <input name="second_name" type="text"/>
-    </label>
-    <label class="form__input">
-      Телефон
-      <input name="phone" type="tel"/>
-    </label>
-    <label class="form__input">
-      Пароль
-      <input name="password" type="password"/>
-    </label>
-    <label class="form__input">
-      Пароль (ещё раз)
-      <input name="password_repeat" type="password"/>
-    </label>
-    <button class="button_primary" type="submit">Зарегистрироваться</button>
-    <a href="../LoginPage/login.hbs" class="link_centered">Вход</a>
+    {{{ Button }}}
+    {{{ Link }}}
   </form>
 </main>
