--- a/src/components/Input/input.hbs
+++ b/src/components/Input/input.hbs
@@ -1,1 +1,3 @@
-<input name="{{ name }}" type="{{ type }}"/>
+<input {{#if id}}id="{{id}}" {{/if}} {{#if class}}class="{{class}}" {{/if}}
+  {{#if placeholder}}placeholder="{{placeholder}}"{{/if}} name="{{ name }}"
+       type="{{ type }}"/>
