--- a/src/pages/ProgilePage/profile.pcss
+++ b/src/pages/ProgilePage/profile.pcss
@@ -1,7 +1,7 @@
 .page-wrapper {
   display: grid;
   grid-template-columns: 4rem auto;
-  grid-template-rows: 100vh;
+  grid-template-rows: 100%;
 
   .back-button {
     background: #FBFBFB;
