--- a/src/widgets/MessageControls/MessageControls.hbs
+++ b/src/widgets/MessageControls/MessageControls.hbs
@@ -1,6 +1,6 @@
 <form class="message-controls">
   <button class="message-controls__attach-button" type="button"><img src="/attach.svg" alt="Добавить вложение"/></button>
   <label for="message" class="message-controls__input-label">Сообщение</label>
-  <input id="message" name="message" type="text" class="message-controls__input" placeholder="Сообщение"/>
+  {{{Input}}}
   <button class="message-controls__send-button" type="submit"><img src="/send.svg" alt="Отправить"/></button>
 </form>
