--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -1,48 +1,16 @@
 @import "variables.pcss";
-@import "../widgets/auth.pcss";
-@import "../widgets/error.pcss";
-@import "../widgets/ChatBrowser/ChatBrowser.pcss";
-@import "../widgets/MessageControls/MessageControls.pcss";
-@import "../pages/HomePage/main.pcss";
-@import "../pages/ProgilePage/profile.pcss";
+@import "../pages/LoginPage/loginPage.pcss";
+@import "../pages/ErrorPage/errorPage.pcss";
+@import "../widgets/ChatBrowser/chatBrowser.pcss";
+@import "../widgets/MessageControls/messageControls.pcss";
+@import "../pages/HomePage/homePage.pcss";
+@import "../pages/SettingsPage/settingsPage.pcss";
+@import "../pages/ProgilePage/profilePage.pcss";
+@import "../components/Link/link.pcss";
+@import "../components/Button/button.pcss";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.button_primary {
-  height: 2rem;
-  border-radius: 8px;
-  color: white;
-  border: none;
-  background-color: $color-primary;
-  margin-bottom: 1rem;
-  padding: 12px;
-  line-height: 10px;
-  box-sizing: border-box;
-}
-
-.link {
-  color: $color-primary;
-  text-decoration: none;
-  cursor: pointer;
-
-  &:hover {
-    text-decoration: underline;
-  }
-
-  &_centered {
-    color: $color-primary;
-    text-decoration: none;
-    cursor: pointer;
-    margin: 0 auto;
-  }
-
-  &_alert {
-    text-decoration: none;
-    cursor: pointer;
-    color: $color-alert;
-  }
 }
