Fixes and refactoring

--- a/src/pages/ErrorPage/errorPage.hbs
+++ b/src/pages/ErrorPage/errorPage.hbs
@@ -1,5 +1,5 @@
 <main class="container_center">
   <h1>{{ code }}</h1>
   <p>{{ text }}</p>
-  <a href="../HomePage/homePage.hbs" class="link_centered">Назад к чатам</a>
+  {{{ Link }}}
 </main>
