connecting main page to api

--- a/src/components/ChatItem/chatItem.hbs
+++ b/src/components/ChatItem/chatItem.hbs
@@ -1,7 +1,7 @@
 <li class="chat-item">
   <img class="chat-item__avatar" src="/avatar.png" alt="Avatar"/>
   <div>
-    <div class="chat-item__name">Андрей</div>
+    <div class="chat-item__name">{{ this.title }}</div>
     <div class="chat-item__preview">
       <span class="chat-item__sender">Вы:</span>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, eum!
