--- a/src/pages/HomePage/homePage.hbs
+++ b/src/pages/HomePage/homePage.hbs
@@ -6,16 +6,7 @@
       <p class="chat-info__name">Вадим</p>
       <button class="chat-info__etc-button"><img src="/etc.svg" alt="Еще"/></button>
     </div>
-    <ul class="chat-thread">
-      <li class="chat-thread__date-separator">
-        <span>19 июня</span>
-      </li>
-       {{{ Message }}}
-      <li class="chat-thread__date-separator">
-        <span>20 июня</span>
-      </li>
-      {{{ Message }}}
-    </ul>
-     {{{ MessageControls }}}
+      {{{ ChatThread }}}
+      {{{ MessageControls }}}
   </main>
 </div>
