--- a/src/blocks/ChatBrowser/chatBrowser.hbs
+++ b/src/blocks/ChatBrowser/chatBrowser.hbs
@@ -1,5 +1,6 @@
 <aside class="browser">
   {{{ Link }}}
+  {{{ CreateButton }}}
   <div class="search">
     <label for="search" class="search__label">Поиск</label>
     <input id="search" class="search__input" name="search_query" type="text" placeholder="Поиск"/>
