--- a/src/components/Message/message.hbs
+++ b/src/components/Message/message.hbs
@@ -1,8 +1,6 @@
 <li class="chat-thread__message">
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-    deserunt quod dolore, incidunt facere rem adipisci quae iure
-    officia autem.
+    {{ this.text }}
   </p>
-  <div class="">13:30</div>
+  <div class="">{{ this.time }}</div>
 </li>
