add modal and refactored styles

--- a/src/pages/LoginPage/loginPage.hbs
+++ b/src/pages/LoginPage/loginPage.hbs
@@ -1,5 +1,5 @@
 <main class="card">
-  <h1>Вход</h1>
+  <h1 class="card__heading">Вход</h1>
   <form class="form">
     {{# each Inputs }}
       {{{ this }}}
