--- a/src/pages/RegisterPage/registerPage.hbs
+++ b/src/pages/RegisterPage/registerPage.hbs
@@ -1,5 +1,5 @@
 <main class="card">
-  <h1>Регистрация</h1>
+  <h1 class="card__heading">Регистрация</h1>
   <form class="form">
     {{# each Inputs}}
       {{{ this }}}
