--- a/src/pages/SettingsPage/settingsPage.hbs
+++ b/src/pages/SettingsPage/settingsPage.hbs
@@ -2,23 +2,8 @@
   {{{ Link }}}
   <main class="settings">
     <img class="settings__avatar" src="/avatar.png" alt="Avatar"/>
-    <form class="settings__form">
-      {{#each ProfileDataInputs }}
-        {{{this}}}
-      {{/each}}
-      {{{ChangeDataButton}}}
-    </form>
-    <form class="settings__form">
-      <h2>Смена аватара</h2>
-      {{{ AvatarInput }}}
-      {{{ChangeAvatarButton}}}
-    </form>
-    <form class="settings__form">
-      <h2>Смаена пароля</h2>
-      {{#each PasswordInputs }}
-        {{{this}}}
-      {{/each}}
-      {{{ChangePasswordButton}}}
-    </form>
+      {{{DataForm}}}
+      {{{AvatarForm}}}
+      {{{PasswordForm}}}
   </main>
 </div>
