--- a/src/pages/HomePage/homePage.hbs
+++ b/src/pages/HomePage/homePage.hbs
@@ -1,12 +1,15 @@
-<div class="row-container">
- {{{ ChatBrowser }}}
-  <main class="chat">
-    <div class="chat-info">
-      <img class="chat-info__avatar" src="/avatar.png" alt="Avatar"/>
-      <p class="chat-info__name">Вадим</p>
-      <button class="chat-info__etc-button"><img src="/etc.svg" alt="Еще"/></button>
-    </div>
+<div>
+  {{{ Modal }}}
+  <div class="row-container">
+    {{{ ChatBrowser }}}
+    <main class="chat">
+      <div class="chat-info">
+        <img class="chat-info__avatar" src="/avatar.png" alt="Avatar"/>
+        <p class="chat-info__name">Вадим</p>
+        <button class="chat-info__etc-button"><img src="/etc.svg" alt="Еще"/></button>
+      </div>
       {{{ ChatThread }}}
       {{{ MessageControls }}}
-  </main>
+    </main>
+  </div>
 </div>
