--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -1,2 +1,7 @@
 $color-primary: #3369F3;
+$color-primary-hover: #2b58cb;
+
+$color-secondary: #d7d8de;
+$color-secondary-hover: #c7c8ce;
+
 $color-alert: #F00;
