--- a/src/blocks/ChatBrowser/chatBrowser.pcss
+++ b/src/blocks/ChatBrowser/chatBrowser.pcss
@@ -2,7 +2,7 @@
 
 .browser {
   display: grid;
-  grid-template-rows: repeat(2, min-content) auto;
+  grid-template-rows: repeat(3, min-content) auto;
   border-right: 1px solid #999999;
   background-color: #FBFBFB;
 
@@ -12,6 +12,7 @@
 }
 
 .search {
+  margin-bottom: 0.5rem;
   &__label {
     display: none;
   }
@@ -30,57 +31,4 @@
 .chat-list {
   overflow-y: auto;
   list-style: none;
-}
-
-.chat-item {
-  padding: 12px;
-  display: grid;
-  gap: 6px;
-  grid-template-columns: 1fr auto 1fr;
-  cursor: pointer;
-
-  &__separator {
-    height: 1px;
-    width: 100%;
-    background-color: #999999;
-    grid-column: span 3;
-  }
-
-  &__sender {
-    font-weight: bold;
-  }
-
-  &__avatar {
-    margin: auto 6px;
-    height: 3rem;
-    aspect-ratio: 1;
-  }
-
-  &__name {
-    font-weight: bold;
-  }
-
-  &__preview {
-  }
-
-  &__time {
-  }
-
-  &__notification-badge-container {
-    width: 100%;
-    height: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__notification-badge {
-    text-align: center;
-    color: white;
-    background-color: $color-primary;
-    border-radius: 9999px;
-    padding: 0.5rem;
-    width: 2rem;
-    height: 2rem;
-  }
 }
