--- a/src/components/ChatItem/chatItem.hbs
+++ b/src/components/ChatItem/chatItem.hbs
@@ -1,16 +1,22 @@
 <li class="chat-item">
-  <img class="chat-item__avatar" src="/avatar.png" alt="Avatar"/>
-  <div>
-    <div class="chat-item__name">{{ this.title }}</div>
-    <div class="chat-item__preview">
-      <span class="chat-item__sender">Вы:</span>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, eum!
+  <div class="chat-item__container">
+    <img class="chat-item__avatar" src="/avatar.png" alt="Avatar"/>
+    <div>
+      <div class="chat-item__name">{{ this.title }}</div>
+      <div class="chat-item__preview">
+        <span class="chat-item__sender">{{this.last_message.user.login}}:</span>
+        {{ this.last_message.content}}
+      </div>
     </div>
-  </div>
-  <div>
-    <div class="chat-item__time">12:10</div>
-    <div class="chat-item__notification-badge-container">
-      <span class="chat-item__notification-badge">4</span>
+    <div>
+      <div class="chat-item__time">12:10</div>
+      <div class="chat-item__notification-badge-container">
+        <div class="chat-item__notification-badge">
+          <span>
+            {{this.unread_count}}
+          </span>
+        </div>
+      </div>
     </div>
   </div>
   <div class="chat-item__separator"></div>
