--- a/src/components/Message/message.hbs
+++ b/src/components/Message/message.hbs
@@ -1,6 +1,6 @@
-<li class="chat-thread__message">
-  <p>
+<li class="message-{{ this.modifier }}">
+  <p class="message-{{ this.modifier }}__content">
     {{ this.text }}
   </p>
-  <div class="">{{ this.time }}</div>
+  <div class="message-{{ this.modifier }}__time">{{ this.time }}</div>
 </li>
