--- a/src/components/Input/input.hbs
+++ b/src/components/Input/input.hbs
@@ -1,3 +1,7 @@
-<input {{#if id}}id="{{id}}" {{/if}} {{#if class}}class="{{class}}" {{/if}}
-  {{#if placeholder}}placeholder="{{placeholder}}"{{/if}} name="{{ name }}"
+<input {{#if id}}id="{{id}}" {{/if}}
+  {{#if class}}class="{{class}}" {{/if}}
+  {{#if placeholder}}placeholder="{{placeholder}}" {{/if}}
+  {{#if value}}value="{{value}}" {{/if}}
+  {{#if accept}}accept="{{accept}}" {{/if}}
+  name="{{ name }}"
        type="{{ type }}"/>
