--- a/src/pages/SettingsPage/settingsPage.pcss
+++ b/src/pages/SettingsPage/settingsPage.pcss
@@ -6,6 +6,10 @@
   align-items: center;
 
   &__avatar {
+    border-radius: 9999px;
+    height: 12rem;
+    aspect-ratio: 1;
+    object-fit: cover;
     margin-bottom: 1rem;
   }
 }
