--- a/src/pages/SettingsPage/settingsPage.hbs
+++ b/src/pages/SettingsPage/settingsPage.hbs
@@ -1,7 +1,7 @@
 <div class="page-wrapper">
   {{{ Link }}}
   <main class="settings">
-    <img class="settings__avatar" src="/avatar.png" alt="Avatar"/>
+    <img class="settings__avatar" src="{{#if avatar}}https://ya-praktikum.tech/api/v2/resources{{avatar}}{{else}}/avatar.png{{/if}}" alt="Avatar"/>
       {{{DataForm}}}
       {{{AvatarForm}}}
       {{{PasswordForm}}}
