--- a/src/pages/HomePage/homePage.pcss
+++ b/src/pages/HomePage/homePage.pcss
@@ -6,39 +6,6 @@
 
 .chat {
   display: grid;
-  grid-template-rows: min-content auto min-content;
+  grid-template-rows: auto min-content;
   padding: 0 10px;
-}
-
-.chat-info {
-  display: grid;
-  grid-template-columns: repeat(2, min-content) auto;
-  align-items: center;
-  border-bottom: 1px solid #EAEAEA;
-  padding: 6px;
-
-  &__avatar {
-    height: 2rem;
-  }
-
-  &__name {
-    margin-left: 1rem;
-  }
-
-  &__etc-button {
-    margin-left: auto;
-    width: 2rem;
-    aspect-ratio: 1;
-    padding: 6px;
-    align-items: center;
-    outline: none;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    border-radius: 2rem;
-
-    &:hover {
-      background-color: #EAEAEA;
-    }
-  }
 }
