--- a/src/pages/ProgilePage/profilePage.pcss
+++ b/src/pages/ProgilePage/profilePage.pcss
@@ -6,6 +6,10 @@
   .back-button {
     background: #FBFBFB;
     border-right: 1px solid #EAEAEA;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    left: 0;
 
     &:hover {
       background: #FBFBFB;
