--- a/src/blocks/ChatThread/chatThread.pcss
+++ b/src/blocks/ChatThread/chatThread.pcss
@@ -1,5 +1,4 @@
 .chat-thread {
-  list-style: none;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -8,5 +7,46 @@
   &__date-separator {
     text-align: center;
     margin-bottom: 12px;
+  }
+
+  &__header {
+    display: grid;
+    grid-template-columns: repeat(2, min-content) auto;
+    align-items: center;
+    border-bottom: 1px solid #EAEAEA;
+    padding: 6px;
+  }
+
+  &__avatar {
+    height: 2rem;
+  }
+
+  &__name {
+    margin-left: 1rem;
+  }
+
+  &__etc-button {
+    margin-left: auto;
+    width: 2rem;
+    aspect-ratio: 1;
+    padding: 6px;
+    align-items: center;
+    outline: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    border-radius: 2rem;
+
+    &:hover {
+      background-color: #EAEAEA;
+    }
+  }
+
+  &__messages {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+    list-style: none;
   }
 }
