--- a/src/blocks/MessageControls/messageControls.pcss
+++ b/src/blocks/MessageControls/messageControls.pcss
@@ -4,6 +4,7 @@
   align-items: center;
   border-top: 1px solid #EAEAEA;
   padding: 10px 0;
+  height: fit-content;
 
   &__attach-button {
     display: flex;
