--- a/src/blocks/Modal/modal.pcss
+++ b/src/blocks/Modal/modal.pcss
@@ -1,9 +1,11 @@
 .modal {
   &__background {
     position: absolute;
+    left: 0;
+    top: 0;
     background-color: rgba(0, 0, 0, 0.2);
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
   }
 
   &__card {
