--- a/src/components/Button/button.hbs
+++ b/src/components/Button/button.hbs
@@ -1,1 +1,1 @@
-<button class="{{ class }}" type="{{ type }}">{{ text }}</button>
+<button class="{{ class }}" type="{{ type }}">{{{ Content }}}</button>
