--- a/src/pages/ProgilePage/profilePage.pcss
+++ b/src/pages/ProgilePage/profilePage.pcss
@@ -35,6 +35,9 @@
 
   &__avatar {
     margin-bottom: 1rem;
+    border-radius: 9999px;
+    aspect-ratio: 1;
+    object-fit: cover;
   }
 
   &__login {
