--- a/src/pages/HomePage/homePage.pcss
+++ b/src/pages/HomePage/homePage.pcss
@@ -6,6 +6,6 @@
 
 .chat {
   display: grid;
-  grid-template-rows: auto min-content;
+  grid-template-rows: calc(100vh - 65px) min-content;
   padding: 0 10px;
 }
