--- a/src/blocks/ChatThread/chatThread.hbs
+++ b/src/blocks/ChatThread/chatThread.hbs
@@ -9,7 +9,7 @@
       {{{ EtcButton }}}
     </div>
   {{/if}}
-  <ul class="chat-thread__messages">
+  <ul class="chat-thread__messages" id="message-thread">
     {{#each Messages }}
       {{{this}}}
     {{/each}}
