--- a/src/components/ChatItem/chatItem.pcss
+++ b/src/components/ChatItem/chatItem.pcss
@@ -36,6 +36,7 @@
     margin: auto 6px;
     height: 3rem;
     aspect-ratio: 1;
+    object-fit: cover;
     border: 1px solid $color-primary;
     border-radius: 9999px;
   }
