--- a/src/blocks/ChatSettings/chatSettings.hbs
+++ b/src/blocks/ChatSettings/chatSettings.hbs
@@ -1,5 +1,7 @@
 <div>
   <h2 class="chat-settings__heading">Настройки чата</h2>
+  <h3 class="chat-settings__heading">Изменить аватар</h3>
+  {{{ ChangeAvatarForm }}}
   <h3 class="chat-settings__heading">Добавить пользователя</h3>
   {{{ AddUserForm }}}
   <h3 class="chat-settings__heading">Пользователи</h3>
