--- a/src/pages/SettingsPage/settingsPage.hbs
+++ b/src/pages/SettingsPage/settingsPage.hbs
@@ -1,9 +1,7 @@
 <div class="page-wrapper">
   {{{ Link }}}
   <main class="settings">
-    <img class="settings__avatar" src="{{#if
-      avatar}}https://ya-praktikum.tech/api/v2/resources{{avatar}}{{else}}/avatar.png{{/if}}"
-         alt="Avatar"/>
+    {{{ Avatar }}}
     {{{DataForm}}}
     {{{AvatarForm}}}
     {{{PasswordForm}}}
